Beer by ID: done. Would like to add a BACK BUTTON

--- a/src/components/BeerDetails/BeerDetails.css
+++ b/src/components/BeerDetails/BeerDetails.css
@@ -1,1 +1,46 @@
-/* No CSS *//*# sourceMappingURL=BeerDetails.css.map */
+.beer_details-container {
+  width: 100%;
+  padding: 32px 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  gap: 24px;
+}
+
+.beer_details-container img {
+  max-height: 50vh;
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.beer_details-container .beer_details-specs-container {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.beer_details-container .beer_details-specs-container .beer_details-specs-container-line1, .beer_details-container .beer_details-specs-container .beer_details-specs-container-line2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+/*# sourceMappingURL=BeerDetails.css.map */
